--- a/api/package.json
+++ b/api/package.json
@@ -19,9 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.6.0"
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
