--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "esnext",
+    "lib": ["es2021"],
     "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./dist",
