--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,7 @@
     "tsoa": "^6.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.10",
